--- a/package.json
+++ b/package.json
@@ -14,23 +14,33 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@expo/metro-runtime": "~5.0.5",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.4",
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/stack": "^7.4.4",
-    "expo": "~53.0.20",
+    "expo": "~53.0.24",
+    "expo-asset": "~11.1.7",
+    "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
+    "expo-font": "~13.3.2",
+    "expo-linking": "~7.1.7",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
     "graphql": "^16.11.0",
     "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.6",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.27.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1",
-    "react-native-svg": "^15.12.1",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
